# seabirdscientific

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  contributing.md  demo.ipynb  examples.ipynb  plot_line.ipynb  plot_ts.ipynb  pyproject.toml  requirements.txt
.github/: CODEOWNERS  notify-support.py  notify_support.py  pull-request-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  feature_request.md  question.md
.github/workflows/: black.yml  notify-support.yml  ruff.yml
community/: community_readme.md
docs/: .buildinfo  cal_coefficients.html  contour.html  conversion.html  ctd_processing.html  eos80_conversion.html  eos80_processing.html  genindex.html  index.html  instrument_data.html  interpret_sbs_variable.html  migration_guide.html  objects.inv  processing.html  py-modindex.html  search.html  searchindex.js  utils.html  visualization.html
docs/.doctrees/: cal_coefficients.doctree  contour.doctree  conversion.doctree  ctd_processing.doctree  environment.pickle  eos80_conversion.doctree  eos80_processing.doctree  index.doctree  instrument_data.doctree  interpret_sbs_variable.doctree  migration_guide.doctree  processing.doctree  utils.doctree  visualization.doctree
docs/_sources/: cal_coefficients.rst.txt  conversion.rst.txt  eos80_processing.rst.txt  index.rst.txt  interpret_sbs_variable.rst.txt  migration_guide.rst.txt  processing.rst.txt  visualization.rst.txt
docs/_static/styles/: sbsfuro.css  sbsfuro.css.map
docs_src/source/: conf.py  contour.rst  ctd_processing.rst  eos80_conversion.rst  index.rst  instrument_data.rst  utils.rst
documentation/: acs-read-dev.ipynb  conversion-19plusV2.ipynb  conversion-HydroCAT.ipynb  conversion-SBE16plusV2.ipynb  conversion-SBE19plusV2.ipynb  conversion-SBE37.ipynb  conversion-SBE39plus.ipynb  conversion-SBE911plus.ipynb  conversion-SeaFET.ipynb  conversion-SeaFETV2.ipynb  conversion-SeapHOxV2.ipynb  ctd-processing.ipynb  demo.ipynb  installation.md  processing.ipynb
documentation/example_data/: 19plus_V2_01906130_Profiling.hex  19plus_V2_CTD-processing_example.hex  __init__.py  example_coefficients.py  example_df_for_processing.pkl
documentation/example_data/SBE37/: SBE37SM.hex
documentation/example_data/SeaFET_V2/: SeaFET2.hex  SeaFET_V2.hex
documentation/images/: ctd-processing.ipynb
examples/: demo.ipynb  examples.ipynb  plot_line.ipynb  plot_ts.ipynb
notebooks/: conversion-HydroCAT.ipynb  conversion-SBE16plusV2.ipynb  conversion-SBE19plusV2.ipynb  conversion-SBE39plus.ipynb  processing.ipynb
notebooks/example_data/19plus_V2/: 19plus_V2.hex
notebooks/example_data/HydroCAT/: HydroCAT-ODO.hex
notebooks/example_data/SBE16plus_V2/: SBE16plus_V2.hex
notebooks/example_data/SeapHOx_V2/: SeapHOx_V2.hex
resources/: SBE37SM-RS232_03711722_2015_11_18_filtered_scipy.csv  example_coefficients.py  example_fail_slash.csv  example_pass.json
resources/test-data/: 19plus_V2_CTD-processing_example.cnv  19plus_V2_CTD-processing_example_boxcar_5.cnv  19plus_V2_CTD-processing_example_cosine_5.cnv  19plus_V2_CTD-processing_example_cosine_5_excluded.cnv  19plus_V2_CTD-processing_example_gaussian_5_1_025_excluded.cnv  19plus_V2_CTD-processing_example_triangle_5.cnv  SBE19plus_01906398_2019_07_15_0033_cropped2_binavg_surface.cnv  SBE19plus_01906398_2019_07_15_0033_cropped_binavg_interp.cnv  SBE19plus_01906398_2019_07_15_0033_cropped_binavg_interp_bin5.cnv  SBE19plus_01906398_2019_07_15_0033_cropped_binavg_interp_surface.cnv  SBE19plus_01906398_2019_07_15_0033_cropped_binavg_time.cnv  SBE19plus_01906398_2019_07_15_0033_cropped_binavg_upcast_interp.cnv  SBE19plus_01906398_2019_07_15_0033_cropped_loopedit.cnv  SBE19plus_01906398_2019_07_15_0033_cropped_loopedit_wildedit_binavg_exclude_interp.cnv  SBE19plus_01906398_2019_07_15_0033_cropped_loopedit_wildedit_binavg_include_interp.cnv
resources/test-data/19plus_V2/: 19plus_V2_trim.hex
sbs/: __init__.py  processing
sbs/example_notebooks/: demo.ipynb  plot_line.ipynb
sbs/process/: cal_coefficients.py  instrument_data.py  utils.py
sbs/tests/: __init__.py  test_processing.py
sbs/tests/resources/: example_pass.json
sbs/visualize/: visualization.py
seabirdscientific/: sbs_data_processing  sbs_data_visualization
src/sbs/: core.py
src/sbs/instruments/: acs.py
src/sbs/process/: __init__.py  cal_coefficients.py  contour.py  conversion.py  instrument_data.py  processing.py  utils.py
src/sbs/resources/: __init__.py
src/sbs/visualize/: __init__.py  interpret_sbs_variable.py  visualization.py
src/seabirdscientific/: __init__.py  acs.py  cal_coefficients.py  contour.py  conversion.py  eos80_conversion.py  eos80_processing.py  instrument_data.py  interpret_sbs_variable.py  processing.py  utils.py  visualization.py
src/seabirdscientific/visualize/: visualization.py
tests/: conftest.py  example_coefficients.py  test_coefficients.py  test_conversion.py  test_instrument_data.py  test_processing.py  test_visualization.py
tests/resources/: __init__.py  example_fail_extra.csv  example_fail_missing.csv  example_fail_semicolon.csv  example_pass.asc  example_pass.csv
tests/resources/test-data/: 19plus_V2_CTD-processing_example.cnv  19plus_V2_CTD-processing_example_boxcar_5_excluded.cnv  19plus_V2_CTD-processing_example_gaussian_5_1_025.cnv  19plus_V2_CTD-processing_example_median_5.cnv  19plus_V2_CTD-processing_example_median_5_excluded.cnv  19plus_V2_CTD-processing_example_triangle_5_excluded.cnv  19plus_V2_CTD-processing_example_wild_edit.cnv  19plus_V2_CTD_nmea_data.hex  911plus_trim.hex  ACS-00011_2022-10-20.DEV  ACS181.DEV  CAST0002_mod_filt.cnv  CAST0002_mod_filt_loop_min_v.cnv  CAST0002_mod_filt_loop_min_v_exclude_flags.cnv  CAST0002_mod_filt_loop_min_v_exclude_flags_from_remove_soak.cnv  CAST0002_mod_filt_loop_min_v_remove_soak.cnv  (+36 more)
(+118 files in other folders)
