[project]
name = "seabirdscientific"
version = "2.6.1"
description = "Sea-Bird Scientific Community Toolkit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Sea-Bird Scientific", email = "techsupport@seabird.com"},
    {name = "Ryan Anderson", email = "randerson@seabird.com"},
    {name = "Lukas Christensen", email = "lchristensen@seabird.com"},
    {name = "Dane Lucas", email = "dlucas@seabird.com"},
    {name = "Eric Rehm", email = "erehm@seabird.com"},
    {name = "Bruce Rhoades", email = "brhoades@seabird.com"},
    {name = "Jesse Templin", email = "jtemplin@seabird.com"},
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "gsw",
  "matplotlib",
  "numpy",
  "pandas",
  "plotly>=6.0.0",
  "scipy",
]

# For dev environment created with venv and pip
[project.optional-dependencies]
dev = [
  "nbformat",
  "notebook",
  "pytest",
  "pytest-cov",
  "black==25.1.0",
  "pylint",
  "build"
]

# For dev environment created with UV
[dependency-groups]
dev = [
  "nbformat",
  "notebook",
  "pytest",
  "pytest-cov",
]


[project.urls]
Homepage = "https://www.seabird.com/software"
Repository = "https://github.com/Sea-BirdScientific/seabirdscientific"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
]

[tool.black]
line-length=99
exclude = '''
/(
    CONTRIBUTING\.md
  | README\.md
  | venv
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
addopts = "--cov=seabirdscientific --cov-report term-missing"

[tool.coverage.run]
omit = [
  "interpret_sbs_variable.py"
]
