[project]
name = "seabirdscientific"
version = "2.7.0"
description = "Sea-Bird Scientific Community Toolkit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Sea-Bird Scientific", email = "techsupport@seabird.com"},
    {name = "Ryan Anderson", email = "randerson@seabird.com"},
    {name = "Lukas Christensen", email = "lchristensen@seabird.com"},
    {name = "Dane Lucas", email = "dlucas@seabird.com"},
    {name = "Eric Rehm", email = "erehm@seabird.com"},
    {name = "Bruce Rhoades", email = "brhoades@seabird.com"},
    {name = "Jesse Templin", email = "jtemplin@seabird.com"},
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "gsw",
  "matplotlib",
  "numpy",
  "pandas",
  "plotly>=6.0.0",
  "scipy",
]

# For dev environment created with venv and pip
[project.optional-dependencies]
dev = [
  "build",
  "nbconvert[webpdf]",
  "nbformat",
  "notebook",
  "pytest",
  "pytest-cov",
  "ruff",
  "kaleido",
]

# For dev environment created with UV
[dependency-groups]
dev = [
  "nbconvert[webpdf]",
  "nbformat",
  "notebook",
  "pytest",
  "pytest-cov",
  "kaleido",
]

[project.urls]
Homepage = "https://www.seabird.com/software"
Repository = "https://github.com/Sea-BirdScientific/seabirdscientific"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
  ".git",
  ".github",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "build",
  "dist",
]

[tool.coverage.run]
omit = [
  "interpret_sbs_variable.py"
]

[tool.ruff]
line-length=99
exclude = [
  ".git",
  ".github",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "build",
  "dist",
]
