[project]
name = "seabirdscientific"
version = "2.7.9"
description = "Sea-Bird Scientific Community Toolkit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Sea-Bird Scientific", email = "techsupport@seabird.com"},
    {name = "Ryan Anderson", email = "randerson@seabird.com"},
    {name = "Lukas Christensen", email = "lchristensen@seabird.com"},
    {name = "Dane Lucas", email = "dlucas@seabird.com"},
    {name = "Eric Rehm", email = "erehm@seabird.com"},
    {name = "Bruce Rhoades", email = "brhoades@seabird.com"},
    {name = "Jesse Templin", email = "jtemplin@seabird.com"},
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "gsw~=3.6.20",
  "matplotlib~=3.9.4",
  "numpy~=2.0.2",
  "pandas~=2.3.3",
  "plotly~=6.3.1",
  "scipy~=1.13.1",
]

# For dev environment created with venv and pip
[project.optional-dependencies]
dev = [
  "build",
  "nbconvert[webpdf]",
  "nbformat",
  "notebook",
  "pytest",
  "pytest-cov",
  "ruff",
  "kaleido",
]

# For dev environment created with UV
[dependency-groups]
dev = [
  "kaleido~=1.1.0",
  "nbconvert[webpdf]~=7.16.6",
  "nbformat~=5.10.4",
  "notebook~=7.4.7",
  "pytest~=8.4.2",
  "pytest-cov~=6.2.1",
]

[project.urls]
Homepage = "https://www.seabird.com/software"
Repository = "https://github.com/Sea-BirdScientific/seabirdscientific"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
]

[tool.ty.src]
include = [
  "src",
  "tests",
]
exclude = [
  "tests/resources",
]

[tool.coverage.run]
omit = [
  "interpret_sbs_variable.py"
]

[tool.ruff]
line-length=99
extend-exclude = [
  ".github",
]
